// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StartOverComponentFactory AssessmentStartOverFactory getStartOverComponent 1`] = `
<StartOverDropdown
  allTestSuffix="Assessment"
  dropdownDirection="down"
  rightPanelOptions={
    {
      "showTest": true,
    }
  }
  singleTestSuffix="the title"
  switcherStartOverPreferences={
    {
      "showTest": true,
    }
  }
/>
`;

exports[`StartOverComponentFactory AssessmentStartOverFactory getStartOverMenuItem 1`] = `
<DocumentFragment>
  <div
    role="menuitem"
  >
    <div>
      <button
        aria-label="start over menu"
        class="ms-Button ms-Button--action ms-Button--command insightsCommandButton root-109"
        data-is-focusable="true"
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-110"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden="true"
            class="ms-Icon root-105 ms-Button-icon commandBarButtonIcon icon-112 commandBarButtonIcon"
            data-icon-name="Refresh"
          />
          <span
            class="ms-Button-textContainer textContainer-111"
          >
            <span
              class="ms-Button-label label-113"
              id="id__0"
            >
              Start over
            </span>
          </span>
          <i
            aria-hidden="true"
            class="ms-Icon root-105 ms-Button-menuIcon menuIcon-114"
            data-icon-name="ChevronRight"
          />
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverComponent renders scanning is false => component matches snapshot 1`] = `
<InsightsCommandButton
  className="startOverMenuItem"
  data-automation-id="start-over"
  disabled={false}
  iconProps={
    {
      "className": "startOverMenuItemIcon",
      "iconName": "Refresh",
    }
  }
  onClick={[Function]}
  text="Start over"
/>
`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverComponent renders scanning is true => component matches snapshot 1`] = `
<InsightsCommandButton
  className="startOverMenuItem"
  data-automation-id="start-over"
  disabled={true}
  iconProps={
    {
      "className": "startOverMenuItemIcon",
      "iconName": "Refresh",
    }
  }
  onClick={[Function]}
  text="Start over"
/>
`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverMenuItem renders scanning is false => component matches snapshot 1`] = `
{
  "className": "startOverMenuItem",
  "data-automation-id": "start-over",
  "disabled": false,
  "iconProps": {
    "className": "startOverMenuItemIcon",
    "iconName": "Refresh",
  },
  "onClick": [Function],
  "text": "Start over",
}
`;

exports[`StartOverComponentFactory FastpassStartOverFactory getStartOverMenuItem renders scanning is true => component matches snapshot 1`] = `
{
  "className": "startOverMenuItem",
  "data-automation-id": "start-over",
  "disabled": true,
  "iconProps": {
    "className": "startOverMenuItemIcon",
    "iconName": "Refresh",
  },
  "onClick": [Function],
  "text": "Start over",
}
`;

exports[`StartOverComponentFactory QuickAssessStartOverFactory getStartOverComponent 1`] = `
<StartOverDropdown
  allTestSuffix="Quick Assess"
  dropdownDirection="down"
  rightPanelOptions={
    {
      "showTest": true,
    }
  }
  singleTestSuffix=""
  switcherStartOverPreferences={
    {
      "showTest": false,
    }
  }
/>
`;

exports[`StartOverComponentFactory QuickAssessStartOverFactory getStartOverMenuItem 1`] = `
<DocumentFragment>
  <div
    role="menuitem"
  >
    <div>
      <button
        aria-label="start over menu"
        class="ms-Button ms-Button--action ms-Button--command insightsCommandButton root-109"
        data-is-focusable="true"
        type="button"
      >
        <span
          class="ms-Button-flexContainer flexContainer-110"
          data-automationid="splitbuttonprimary"
        >
          <i
            aria-hidden="true"
            class="ms-Icon root-105 ms-Button-icon commandBarButtonIcon icon-112 commandBarButtonIcon"
            data-icon-name="Refresh"
          />
          <span
            class="ms-Button-textContainer textContainer-111"
          >
            <span
              class="ms-Button-label label-113"
              id="id__3"
            >
              Start over
            </span>
          </span>
          <i
            aria-hidden="true"
            class="ms-Icon root-105 ms-Button-menuIcon menuIcon-114"
            data-icon-name="ChevronRight"
          />
        </span>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
